--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,5 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-
-# Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.nonFinalResIds=false
